Plugin Name: CoursePress Pro
Author:      WPMU DEV (Irene, Marcin, Philipp, Marko, Jose, Rheinard)
Build Time:  BUILDTIME

CHANGELOG
=================================================

= 2.0.6 =
-------------------------------------------------

= 2.0.5 =
-------------------------------------------------
* Added HTML preview for Raports.
* Added ability to turn on/off social sharing icons.
* Added check is safe_mode before call set_time_limit() function.
* Added the action "coursepress_woocommerce_product_updated". This action has two variable $product_id and $course_id and is called after update product by CoursePress.
* Added check is user logged before we show comment form in discussion module.
* Added CoursePress Endpoints to Apperance -> Menu screen.
* Added ability to remember the last sorting chosen by user on the list of courses in admin area.
* Added new option "Show empty units" which allow to show units without modules.
* Improved select2 field for prerequisites and remove current course from the list.
* Improved MarketPress product thumbnail and images integration.
* Improved link building to student profile in admin area.
* Improved HTML login & signup forms.
* Improved TinyMCE editor on course edit screen.
* FIxed on signup form double error messages.
* Fixed "Grades" screen.
* Fixed a wrong link to student profile from students tab on a course edit screen.
* Fixed a bug with prerequisites courses when we have only one prerequisite course.
* Fixed registration email tokens.
* Fixed registration form shortcode.
* Fixed a wrong icon on assessments page, it was always shown fail icon.
* Fixed missing html attributes on certificate preview.
* Fixed missing messages on login/signup form.

= 2.0.4 =
-------------------------------------------------
* Added ability to enroll, when we use course_join_button, but we are not logged.
* Added sanitization course id field in "course_join_button" shortcode.
* Added ability to save course state and exit.